# test-todo-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  message_utils.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  database.py  main.py  models.py  utils.py
app/routers/: calculator.py  todos.py
static/: index.html
tests/: test_calculator.py  test_todos.py
