[project]
name = "test-todo-app"
version = "0.1.0"
description = "Simple TODO app for testing AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0"
]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
pythonpath = ["app", "tests"]
asyncio_mode = "auto"